@@ -2,9 +2,9 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 
 pkgname=libreoffice
-_LOver=3.2.99.2 # = 3.3-alpha1
+_LOver=3.2.99.2 # = 3.3-beta2
 pkgver=${_LOver}
-pkgrel=1
+pkgrel=2
 pkgdesc="a productivity suite that is compatible with other major office suites"
 arch=('i686' 'x86_64')
 _LO_tree="3.3"
@@ -16,7 +16,7 @@ makedepends=('boost' 'sane' 'perl-archive-zip' 'zip' 'unzip' 'xulrunner' 'unixod
              'apache-ant' 'gperf' 'poppler' 'kdelibs' 'gconf' 'openjdk6' 'cppunit'
 	     'beanshell'  'vigra' 'libldap' 'lucene' 'libmythes' 'junit' 'libwpg' 'imagemagick'
 	     # for additional ooo-build features
-	     'mesa>=7.5' 'gstreamer0.10-base>=0.10.26'  'mono>=2.6.1') 
+	     'mesa>=7.5' 'gstreamer0.10-base>=0.10.26' ) #'mono>=2.6.1'
 	#'saxon'
 depends=("curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd' 'libxaw' "neon>=0.28.6"
           'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.2.1" 'libxslt'
@@ -41,8 +41,9 @@ optdepends=('java-runtime:     adds java support'
              'sane:             for scanner access'
              'unixodbc:         adds ODBC database support'
              'mesa:             for the OGLTrans extension'
-             'mono:             allows UNO automation with Mono'
              'gstreamer0.10-base: + some gstr-plugins to support multimedia content, e.g. in impress')
+#             'mono:             allows UNO automation with Mono'
+
 backup=(usr/lib/ooo-3.3/program/sofficerc)
 provides=('openoffice-base' 'go-openoffice')
 conflicts=('openoffice-base' 'go-openoffice')
@@ -121,10 +122,11 @@ source=(${_mirror}/${pkgname}-build-${_LOver}.tar.gz
 	${_additional_source_url}/fca8706f2c4619e2fa3f8f42f8fc1e9d-rasqal-0.9.16.tar.gz
 	${_additional_source_url}/fcc6df1160753d0b8c835d17fdeeb0a7-boost_1_39_0.tar.gz
 	${_additional_source_url}/fdb27bfe2dbe2e7b57ae194d9bf36bab-SampleICC-1.3.2.tar.gz
-	${_additional_source_url}/fe5b3e2b7c4577f30dc001054365653e-dejavu-fonts-ttf-2.30.zip
+	${_additional_source_url}/37282537d0ed1a087b1c8f050dc812d9-dejavu-fonts-ttf-2.32.zip
 	${_additional_source_url}/831126a1ee5af269923cfab6050769fe-mysql-connector-cpp.zip
 	${_additional_source_url}/067201ea8b126597670b5eff72e1f66c-mythes-1.2.0.tar.gz
 	${_additional_source_url}/cf8a6967f7de535ae257fa411c98eb88-mdds_0.3.0.tar.bz2
+	http://www.numbertext.org/linux/f20f67d1715c7be81688a2ad58d8291d-LinLibertineG-20101004.zip
 	http://download.go-oo.org/src/47e1edaa44269bc537ae8cabebb0f638-JLanguageTool-1.0.0.tar.bz2
 	http://download.go-oo.org/src/90401bca927835b6fbae4a707ed187c8-nlpsolver-0.9.tar.bz2
 	http://download.go-oo.org/src/debc62758716a169df9f62e6ab2bc634-zlib-1.2.3.tar.gz
@@ -232,10 +234,11 @@ md5sums=('592fdc3d8b6b70fee15a651649cd8e01'
          'fca8706f2c4619e2fa3f8f42f8fc1e9d'
          'fcc6df1160753d0b8c835d17fdeeb0a7'
          'fdb27bfe2dbe2e7b57ae194d9bf36bab'
-         'fe5b3e2b7c4577f30dc001054365653e'
+         '37282537d0ed1a087b1c8f050dc812d9'
          '831126a1ee5af269923cfab6050769fe'
          '067201ea8b126597670b5eff72e1f66c'
          'cf8a6967f7de535ae257fa411c98eb88'
+	 'f20f67d1715c7be81688a2ad58d8291d'
          '47e1edaa44269bc537ae8cabebb0f638'
          '90401bca927835b6fbae4a707ed187c8'
          'debc62758716a169df9f62e6ab2bc634'
@@ -274,6 +277,8 @@ build() {
 
 	# python2 fix
 	export PYTHON=python2
+	# mono2.8 hack
+#	sed -i -e "s/mkbundle2/mkbundle/g" patches/mono/*.diff || return 1
 	
 	if [ "$CARCH" = "x86_64" ]; then
 	      EXTRAOPTS="--without-stlport"
@@ -300,6 +305,7 @@ build() {
 		--enable-graphite\
 		--disable-gio\
 		--disable-kde\
+		--disable-mono\
 		--enable-kde4\
 		--enable-ldap \
 		--enable-lockdown\
@@ -342,7 +348,7 @@ build() {
 #		--with-system-saxon\
 #		--with-saxon-jar=/usr/share/java/saxon/saxon9he.jar\
 		
-#		--enable-report-builder \
+#		--enable-report-builder \	
 #		--with-additional-sections="OOXMLExport"
 
 	unset MAKEFLAGS
@@ -361,4 +367,8 @@ package() {
 	find ${pkgdir} -perm 444 -exec chmod 644 {} \;
 	find ${pkgdir} -perm 555 -exec ls -lh {} \;
 	find ${pkgdir} -perm 555 -exec chmod 755 {} \;
+	
+	# create missing link https://bugs.archlinux.org/task/21358
+	cd ${pkgdir}/usr/bin
+        ln -s /usr/bin/ooffice libreoffice
 }
