@@ -1,3 +1,11 @@
+2010-10-30 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.99.2-2 :
+	- db5.1/poppler rebuild
+	- add a missing link for the start menu entries, https://bugs.archlinux.org/task/21358
+	- update source tree
+	- disable mono for now, requires major upstream code rework
+
 2010-10-09 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.99.2-1 :
